# hera_robot

./: README.md
hera_description/: CMakeLists.txt  README.md  install_dependencies.sh  package.xml
hera_description/config/: joint_names_hera_description.yaml
hera_description/config/rviz/: vizualize_model.rviz
hera_description/config/yaml/: hera_control.yaml  kinect_controller.yaml  manip_controller.yaml
hera_description/launch/: display.launch  gazebo.launch  kinect_controller.launch  load_description.launch  manip_controller.launch  vizualize_model.launch
hera_description/meshes/: base_link.STL  base_scan_link.STL  camera_link.STL  head_link.STL  kinect_link.STL  link_1.STL  link_2.STL  link_3.STL  link_4.STL  link_5.STL  link_6.STL  link_7.STL  manip_link.STL  wheelBR_link.STL  wheelFL_link.STL  xtion_depth_optical.STL  xtion_link.STL
hera_description/meshes/manip_meshes/: link_6.STL  link_6_col.STL
hera_description/robots/: hera_full.sdf  hera_full.urdf  hera_full.urdf.xacro
hera_description/src/: hera_check_collision.cpp
hera_description/urdf/: hera_description.urdf  hera_description_old.urdf  manip_prop.urdf.xacro
hera_description/urdf/actuators/: base.urdf.xacro  head.urdf.xacro  manip.urdf.xacro  torso.urdf.xacro
hera_description/urdf/sensors/: gripper_contact_sensors.urdf.xacro  kinect_one.urdf.xacro
hera_description/urdf/simulation/: asus_xtion.gazebo.xacro  base.gazebo.xacro  colors.gazebo.xacro  control.gazebo.xacro  hokuyo_urg.gazebo.xacro  hokuyo_utm.gazebo.xacro  kinect_one.gazebo.xacro  manip.gazebo.xacro  manip_transmission.xacro
(+27 files in other folders)
